<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/readingNowFragment"
        android:checked="false"
        android:icon="@drawable/ic_book"
        android:title="@string/menu_reading_now" />

    <item
        android:id="@+id/libraryFragment"
        android:checked="false"
        android:icon="@drawable/ic_library_books"
        android:title="@string/menu_library" />

    <item
        android:id="@+id/bookStoreFragment"
        android:checked="false"
        android:icon="@drawable/ic_book_store"
        android:title="@string/menu_book_store" />

    <item
        android:id="@+id/searchFragment"
        android:checked="true"
        android:icon="@drawable/ic_search_white"
        android:title="@string/menu_search" />

</menu>