<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/screen_margin_start" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/screen_margin_start" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/screen_margin_end" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/search_fragment_title"
            android:textAppearance="@style/TextAppearance.Headline.Bold"
            android:textColor="@android:color/background_dark"
            app:layout_constraintEnd_toStartOf="@id/glRight"
            app:layout_constraintStart_toStartOf="@id/glLeft"
            app:layout_constraintTop_toTopOf="@id/glTop" />

        <com.ciandt.book.seeker.ui_kit.SearchableInputTextField
            android:id="@+id/etQuery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xsmall"
            app:inputHint="Apple Books"
            app:layout_constraintEnd_toStartOf="@id/glRight"
            app:layout_constraintStart_toStartOf="@id/glLeft"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <TextView
            android:id="@+id/tvTrending"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/search_fragment_recent"
            android:textAppearance="@style/TextAppearance.Caption"
            app:layout_constraintStart_toStartOf="@id/glLeft"
            app:layout_constraintTop_toBottomOf="@id/etQuery" />

        <TextView
            android:id="@+id/tvClear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackgroundBorderless"
            android:text="@string/search_fragment_clear"
            android:textAppearance="@style/TextAppearance.Caption"
            app:layout_constraintEnd_toStartOf="@id/glRight"
            app:layout_constraintTop_toBottomOf="@id/etQuery" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toStartOf="@id/glRight"
            app:layout_constraintStart_toStartOf="@id/glLeft"
            app:layout_constraintTop_toBottomOf="@id/tvTrending"
            tools:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xsmall"
            android:nestedScrollingEnabled="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/glRight"
            app:layout_constraintStart_toStartOf="@id/glLeft"
            app:layout_constraintTop_toBottomOf="@id/tvTrending"
            app:layout_constraintVertical_bias="0"
            tools:itemCount="4"
            tools:listitem="@layout/searched_book_item"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>